--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>semua manusia berhak dijunjung tinggi tanpa memandang ras, suku, agama</h1>
+    <h2>percobaan h2</h2>
 </body>
 </html>
