penambahan info lanjut

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,5 +9,6 @@
     <h1>ini adalah halaman kontak</h1>
     <p>saya ingin semuanya berbahagia</p>
     <p>kamu bisa mendapatkan nomor saya di: </p>
+    <p>untuk info lebih lanjut kamu bisa mengunjungi halaman berikut ini</p>
 </body>
 </html>
